src/test/ui/chalkify/type_wf.stderr
error[E0277]: the trait bound `f64: Foo` is not satisfied
  --> $DIR/type_wf.rs:18:13
   |
LL | struct S<T: Foo> {
   | ---------------- required by `S`
...
LL |     let s = S {
   |             ^ the trait `Foo` is not implemented for `f64`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
